--- a/build
+++ b/build
@@ -20,13 +20,13 @@ function exit_unless($condition, $msg = null) {
 echo "Building Phar... ";
 $base_dir = dirname(__FILE__);
 $source_dir = $base_dir . '/src/VacationApartments/';
-$phar_path = $base_dir . '/downloads/vacation-apartments.phar';
-$phar = new Phar($phar_path, 0, 'vacation-apartments.phar');
+$phar_path = $base_dir . '/downloads/vacationapartments.phar';
+$phar = new Phar($phar_path, 0, 'vacationapartments.phar');
 $stub = <<<HEREDOC
 <?php
     // Phar Stub File
-    Phar::mapPhar('vacation-apartments.phar');
-    include('phar://vacation-apartments.phar/VacationApartments/Bootstrap.php');
+    Phar::mapPhar('vacationapartments.phar');
+    include('phar://vacationapartments.phar/VacationApartments/Bootstrap.php');
     \VacationApartments\Bootstrap::pharInit();
 
     __HALT_COMPILER();
@@ -43,7 +43,7 @@ echo "[ OK ]\n";
 
 
 // Add it to git!
-//echo "Adding vacation-apartments.phar to the repo... ";
+//echo "Adding vacationapartments.phar to the repo... ";
 //$return_code = 0;
 //passthru("git add $phar_path", $return_code);
 //exit_unless($return_code === 0, "Unable to add download files to git.");
