--- a/examples/sdk-config.ini
+++ b/examples/sdk-config.ini
@@ -1,7 +1,7 @@
 [apiParameters]
-url = https://clientapi.traum-ferienwohnungen.de
+endpoint = https://clientapi.traum-ferienwohnungen.de
 
 ;TODO: replace the following with your apiParameters
 version = v2
-accountEmail = fewo.elisabeth@gmail.com
-accountPassword = 4f703d2c471f8972adac52f
+username = fewo.elisabeth@gmail.com
+password = 4f703d2c471f8972adac52f
